--- a/Document/content/1.2Objectives.md
+++ b/Document/content/1.2Objectives.md
@@ -10,8 +10,8 @@ The primary objectives of AI testing include ensuring the quality, security, and
 
 Key tests covered in this guide include:
 - **Test for Training Data Poisoning**: Preventing and identifying manipulated training data that could compromise model integrity.
-- **Testing for Storing Encryption**: Ensuring data at rest and in transit is encrypted and secure against unauthorized access.
-- **Test for Prompt Injection**: Detecting and mitigating malicious inputs intended to manipulate AI behavior.
-- **Test for Output**: Confirming AI outputs align with expected accuracy, appropriateness, and ethical guidelines.
-- **Test for Data Quality**: Ensuring input data is accurate, complete, and representative.
+- **Test for Data Quality**: Ensuring input data is accurate, complete, and representative.**
+- **Test for Input Injection**: Detecting and mitigating malicious inputs intended to manipulate AI behavior.
+- **Test for Output Content**: Confirming AI outputs align with expected accuracy, appropriateness, and ethical guidelines.
+- - **Testing for Privacy**: Ensuring data confidentiality, model sharing data.
 - **Test for Performance and Reliability**: Continuously evaluating AI system responsiveness, stability, scalability, and reliability under varied conditions.
