--- a/Document/content/2.AI-TM.md
+++ b/Document/content/2.AI-TM.md
@@ -41,7 +41,7 @@ We base our analysis on the Google Secure AI Framework (SAIF), a public model fo
 
 
 <p align="center">
-  <img src="AISystemArchitecture-png" alt="Description" width="600"/>
+  <img src="AISystemArchitecture.png" alt="Description" width="600"/>
 </p>
 
 
