--- a/Document/content/2.1IdentifyAIThreats.md
+++ b/Document/content/2.1IdentifyAIThreats.md
@@ -13,7 +13,7 @@ Our goal was to start mapping the onto concrete components of the architecture, 
 The following is a visual map of threats on the AI Syteemt Architecture:
 
 <p align="center">
-  <img src="AIarchitectureTM.png" alt="AI Architecture Threat Model" width="1200"/>
+  <img src="/images/AIarchitectureTM.png" alt="AI Architecture Threat Model" width="1200"/>
 </p>
 
 ---
