--- a/Document/content/2.1IdentifyAIThreats.md
+++ b/Document/content/2.1IdentifyAIThreats.md
@@ -8,7 +8,7 @@ Our goal was to start mapping the onto concrete components of the architecture, 
 - The OWASP Top 10 LLM Risks 2025
 - OWASP AI Exchange Threats 
 
-The following is a visual map of threats on the AI Syteemt Architecture:
+The following is a visual map of threats on the AI Sytstem Architecture:
 
 <p align="center">
   <img src="/Document/images/AIarchitectureTM.png" alt="AI Architecture Threat Model" width="1200"/>
@@ -41,4 +41,8 @@ The following is a visual map of threats on the AI Syteemt Architecture:
 | 19 | Vector & Embedding Weaknesses | LLM08 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm082025-vector-and-embedding-weaknesses/) | Testing for Embedding Manipulation |
 | 20 | Misinformation | LLM09 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm092025-misinformation/) | Testing for Harmful Content Bias |
 
+These results permit us to create the AI framewwork fot testing and we will describe it in the next section.
 
+---
+[3. AI Testing Guide Framework](3.AITG-Framework.md)
+[Table of Contents](README.md)
