--- a/Document/content/2.1IdentifyAIThreats.md
+++ b/Document/content/2.1IdentifyAIThreats.md
@@ -45,4 +45,4 @@ These results permit us to create the AI framewwork fot testing and we will desc
 
 ---
 [3. AI Testing Guide Framework](3.AITG-Framework.md)
-[Table of Contents](README.md)
+[Table of Contents](/Document/README.md)
