--- a/Document/content/2.1IdentifyAIThreats.md
+++ b/Document/content/2.1IdentifyAIThreats.md
@@ -5,8 +5,8 @@
 We performed a threat modeling over a modular AI architecture (based on Google’s [Secure AI Framework](https://saif.google/secure-ai-framework/saif-map)), visually identifying where AI-specific threats apply across the data, infrastructure, model, and application layers.
 
 Our goal was to start mapping the onto concrete components of the architecture, as seen in this diagram:
-- The OWASP Top 10 LLM Risks 2025
-- OWASP AI Exchange Threats 
+- [The OWASP Top 10 LLM Risks 2025](https://genai.owasp.org/llm-top-10/)
+- [OWASP AI Exchange Threats](https://owaspai.org/docs/ai_security_overview/#periodic-table-of-ai-security)
 
 The following is a visual map of threats on the AI Sytstem Architecture:
 
