--- a/Document/content/2.1IdentifyAIThreats.md
+++ b/Document/content/2.1IdentifyAIThreats.md
@@ -41,8 +41,10 @@ The following is a visual map of threats on the AI Sytstem Architecture:
 | 19 | Vector & Embedding Weaknesses | LLM08 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm082025-vector-and-embedding-weaknesses/) | Testing for Embedding Manipulation |
 | 20 | Misinformation | LLM09 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm092025-misinformation/) | Testing for Harmful Content Bias |
 
-These results permit us to create the AI framewwork fot testing and we will describe it in the next section.
+These results permit us to create the AI framework fot testing and we will describe it in the next section.
 
 ---
+NEXT:
 [3. AI Testing Guide Framework](3.AITG-Framework.md)
+
 [Table of Contents](/Document/README.md)
