--- a/Document/content/1.Introduction.md
+++ b/Document/content/1.Introduction.md
@@ -29,6 +29,6 @@ AI testing should be integrated throughout the entire SDLC:
 
 ---
 NEXT:
-1.1 [Ojectives](/Document/1.2Objectives.md)
+1.1 [Ojectives](1.2Objectives.md)
 
 [Table of Contents](/Document/README.md)
