--- a/Document/content/1.2Objectives.md
+++ b/Document/content/1.2Objectives.md
@@ -15,3 +15,9 @@ Key tests covered in this guide include:
 - **Test for Output Content**: Confirming AI outputs align with expected accuracy, appropriateness, and ethical guidelines.
 - - **Testing for Privacy**: Ensuring data confidentiality, model sharing data.
 - **Test for Performance and Reliability**: Continuously evaluating AI system responsiveness, stability, scalability, and reliability under varied conditions.
+
+---
+NEXT:
+2. [AI System Threat Modeling](2.AI-TM.md)
+
+[Table of Contents](/Document/README.md)
