--- a/Document/content/2.AI-TM.md
+++ b/Document/content/2.AI-TM.md
@@ -131,4 +131,8 @@ From the above diagram, the assets likely include:
 - API exploitation for resource exhaustion (unbounded consumption).
 - Compromise of cloud infrastructure hosting models or data storage.
 
+---
+NEXT:
+2.1 [Identify AI Threats](2.1IdentifyAIThreats.md)
 
+[Table of Contents](/Document/README.md)
