--- a/Document/content/2.1IdentifyAIThreats.md
+++ b/Document/content/2.1IdentifyAIThreats.md
@@ -2,7 +2,7 @@
 
 ## Mapping the OWASP Threats of AI Architecture
 
-We performed a threat modeling over a modular AI architecture (based on Google’s [Secure AI Framework](https://saif.google/secure-ai-framework/saif-map)), visually identifying where AI-specific threats apply across the data, infrastructure, model, and application layers.
+Firstly we performed a mapping between all the OWASP Threats on modular AI architecture (based on Google’s [Secure AI Framework](https://saif.google/secure-ai-framework/saif-map)), visually identifying where AI-specific threats apply across the data, infrastructure, model, and application layers.
 
 Our goal was to start mapping the onto concrete components of the architecture, as seen in this diagram:
 - [The OWASP Top 10 LLM Risks 2025](https://genai.owasp.org/llm-top-10/)
@@ -17,6 +17,8 @@ The following is a visual map of threats on the AI Sytstem Architecture:
 ---
 
 ## OWASP Threat Mapping Table
+
+Given the above results, the following is a table with the 20 initial threats we did extract fro the OWASP Top 10 LLM 2025 and the OWASP AI Exchange Threats.
 
 | # | OWASP Threat Name | Short Name | Source | [URL | Test Name |
 |--:|--------------------|------------|--------|----------|---------------------|
@@ -41,7 +43,6 @@ The following is a visual map of threats on the AI Sytstem Architecture:
 | 19 | Vector & Embedding Weaknesses | LLM08 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm082025-vector-and-embedding-weaknesses/) | Testing for Embedding Manipulation |
 | 20 | Misinformation | LLM09 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm092025-misinformation/) | Testing for Harmful Content Bias |
 
-These results permit us to create the AI framework fot testing and we will describe it in the next section.
 
 ---
 NEXT:
