--- a/Document/content/3.AITG-Framework.md
+++ b/Document/content/3.AITG-Framework.md
@@ -1,6 +1,6 @@
  AI Testing Guide
 
-Welcome to the **AI Threat Testing Guide (AITG)** — a structured framework that maps the most critical security and trustworthy AI threats to concrete test cases. This project aims to bridge traditional cybersecurity, MLOps testing, and Responsible AI assessments under a unified structure.
+Welcome to the **AI Testing Guide (AITG)** — a structured framework that maps the most critical security and trustworthy AI threats to concrete test cases. This project aims to bridge traditional cybersecurity, MLOps testing, and Responsible AI assessments under a unified structure.
 
 Each test case is categorized under one of the four pillars:
 
