--- a/Document/content/3.AITG-Framework.md
+++ b/Document/content/3.AITG-Framework.md
@@ -22,7 +22,7 @@ For each threat, we provide:
 ### 🟦 [AI Application Testing](./tests/AI_APPLICATION_TESTING.md)
 | Test ID       | Test Name                                |
 |---------------|-------------------------------------------|
-| AITG-APP-01   | Testing for Prompt Injection              |
+| AITG-APP-01   | [Testing for Prompt Injection](https://github.com/MatOwasp/AI-Testing-Guide/blob/main/Document/content/tests/AITG-APP-01_Testing_for_Prompt_Injection.md)              |
 | AITG-APP-02   | Testing for Indirect Prompt Injection     |
 | AITG-APP-03   | Testing for Sensitive Data Leak           |
 | AITG-APP-04   | Testing for Input Leakage                 |
