--- a/Document/content/3.AITG-Framework.md
+++ b/Document/content/3.AITG-Framework.md
@@ -2,7 +2,7 @@
 
 Welcome to the **AI Testing Guide (AITG)** — a structured framework that maps the most critical security and trustworthy AI threats to concrete test cases. This project aims to bridge traditional cybersecurity, MLOps testing, and Responsible AI assessments under a unified structure.
 
-Each test case is categorized under one of the four pillars:
+Each test case is categorized under one of the four pillars, based on the threat modeling we did perform in the previous chapters:
 
 - 🟦 **AI Application Testing**
 - 🟪 **AI Model Testing**
@@ -17,7 +17,7 @@ For each threat, we provide:
 
 ---
 
-## 📚 Table of Contents
+The following are the list of tests to perform:
 
 ### 🟦 [AI Application Testing](./tests/AI_APPLICATION_TESTING.md)
 | Test ID       | Test Name                                |
