--- a/Document/content/2.AI-TM.md
+++ b/Document/content/2.AI-TM.md
@@ -128,166 +128,59 @@ We did analyze each component of the architecture from a CIA point of view.
 
 ## Identified CIA Threats 
 
-### 🟦 **Application Layer Threats**
-
-**(1) User Input Threats**
-- Confidentiality: Sensitive data disclosure (PII leakage)
-- Integrity: Prompt injection (direct or indirect), malicious payload injection
-- Availability: DoS via high-complexity prompts, resource exhaustion
-
-**(2) User Output Threats**
-- Confidentiality: Unauthorized exposure of sensitive internal data
-- Integrity: Output manipulation (misinformation, harmful biases, hallucinations)
-- Availability: Output flooding, rate limiting circumvention
-
-**(3) User Interface and Interaction Threats**
-- Confidentiality: Credential or token leakage, session hijacking
-- Integrity: UI spoofing, session fixation, parameter tampering
-- Availability: UI DoS, frontend resource overload (excessive data queries)
-
-**(4) Agents/Plugins (Autonomous Decision-Making Entities) Threats**
-- Confidentiality: Privilege escalation, leakage of secret API keys or internal commands
-- Integrity: Plugin manipulation, malicious instruction injection
-- Availability: Resource exhaustion through automated requests, repeated agent calls (automation loops)
-
-**(5) External Sources for Agent Interactions Threats (Communications)**
-- Confidentiality: Man-in-the-middle (MITM) attacks, sensitive data interception
-- Integrity: Data tampering during transmission, replay attacks
-- Availability: External source downtime, communication latency, API rate-limiting attacks
+Here are the four threat tables aligned with our AI system architecture. Each table represents one of your defined layers, displaying each component with their corresponding threats identified during the threat modeling exercise. 
 
 ---
 
-### 🟪 **Model Layer Threats**
+## 🟦 Application Layer Threats
 
-**(6) Input Handling Threats**
-- Confidentiality: Leaking sensitive data through mishandling inputs
-- Integrity: Input validation bypass, adversarial evasion attacks
-- Availability: Input-based resource exhaustion (e.g., oversized inputs)
-
-**(7) Output Handling Threats**
-- Confidentiality: Leakage of sensitive inference results or hidden instructions
-- Integrity: Generation of unsafe, biased, or manipulated output
-- Availability: Performance degradation, excessive latency on output generation
-
-**(8) Model Usage (Inference) Threats (Communications)**
-- Confidentiality: Eavesdropping on inference requests/responses
-- Integrity: MITM attacks altering inference results
-- Availability: Inference denial via flooding, slow-loris attacks on inference endpoints
+| # | Component | Threats (CIA) |
+|---|-----------|---------------|
+| 1 | **User Input** | Prompt Injection (Integrity), Sensitive data disclosure (Confidentiality), Input-based DoS (Availability) |
+| 2 | **User Output** | Unauthorized data exposure (Confidentiality), Output manipulation (Integrity), Output flooding (Availability) |
+| 3 | **User Interface and Interaction** | Credential leakage (Confidentiality), UI Spoofing, Parameter tampering (Integrity), UI DoS (Availability) |
+| 4 | **Agents/Plugins** | Privilege escalation (Confidentiality), Plugin instruction tampering (Integrity), Automation loops (Availability) |
+| 5 | **External Sources for Agent Interactions** | MITM interception (Confidentiality), Replay attacks, Data tampering (Integrity), External downtime, API DoS (Availability) |
 
 ---
 
-### 🟩 **Infrastructure Layer Threats**
+## 🟪 Model Layer Threats
 
-**(9) Model Storage Infrastructure Threats**
-- Confidentiality: Unauthorized access, model theft at rest
-- Integrity: Unauthorized model modification, malicious tampering
-- Availability: Data loss, hardware failures, ransomware attacks
-
-**(10) Model Serving Infrastructure Threats**
-- Confidentiality: Interception of inference results, compromised endpoints
-- Integrity: Injection of malicious inference code, supply chain compromise
-- Availability: DoS attacks, server overload, infrastructure sabotage
-
-**(11) Model Evaluation Threats**
-- Confidentiality: Exposure of sensitive evaluation data or techniques
-- Integrity: Falsified or manipulated evaluation results
-- Availability: Sabotage evaluation pipelines, resource starvation
-
-**(12) Model Training & Tuning Threats**
-- Confidentiality: Training data leakage, exposure of intellectual property (model weights)
-- Integrity: Model poisoning (malicious training data or parameters), backdoor injections
-- Availability: Resource-intensive attacks slowing or halting training
-
-**(13) Model Frameworks and Code Threats**
-- Confidentiality: Vulnerable code exploitation leading to unauthorized access
-- Integrity: Code injection, dependency confusion attacks, supply chain compromise
-- Availability: Exploits causing crashes, performance degradation, or downtime
-
-**(14) Data Storage Infrastructure Threats**
-- Confidentiality: Unauthorized data access, breaches, data exfiltration
-- Integrity: Unauthorized modification or deletion of stored data
-- Availability: Storage denial (disk flooding), hardware failures, ransomware encryption attacks
+| # | Component | Threats (CIA) |
+|---|-----------|---------------|
+| 6 | **Input Handling** | Input mishandling leaks (Confidentiality), Evasion attacks, input validation flaws (Integrity), Resource exhaustion (Availability) |
+| 7 | **Output Handling** | Leakage of inference results (Confidentiality), Unsafe or biased output generation (Integrity), Excessive latency (Availability) |
+| 8 | **Model Usage (Inference)** | Inference interception (Confidentiality), MITM inference manipulation (Integrity), Endpoint flooding, slow-loris attacks (Availability) |
 
 ---
 
-### 🟨 **Data Layer Threats**
+## 🟩 Infrastructure Layer Threats
 
-**(15) Training Data Threats**
-- Confidentiality: Data breaches, unauthorized access to sensitive datasets
-- Integrity: Training data poisoning, intentional data corruption
-- Availability: Data destruction, resource-heavy training data injections
-
-**(16) Data Filtering and Processing Threats**
-- Confidentiality: Sensitive data disclosure during processing
-- Integrity: Filtering bypass, insertion of malicious processed data
-- Availability: Resource-intensive filters or processors causing denial-of-service
-
-**(17) Data Sources Threats (Communications)**
-- Confidentiality: MITM interception during data transfer
-- Integrity: Data tampering in transit, spoofed data sources
-- Availability: Data source downtime, throttling, or denial-of-service
-
-**(18) External Data Sources (Third-party Providers) Threats (Communications)**
-- Confidentiality: Exposure of sensitive data via third-party breaches
-- Integrity: Malicious manipulation of external datasets before ingestion
-- Availability: External downtime, denial-of-service, rate-limiting attacks on external APIs
+| # | Component | Threats (CIA) |
+|---|-----------|---------------|
+| 9 | **Model Storage Infrastructure** | Unauthorized model access (Confidentiality), Unauthorized modification (Integrity), Data loss, ransomware (Availability) |
+| 10 | **Model Serving Infrastructure** | Inference result interception (Confidentiality), Malicious inference code injection (Integrity), DoS, server overload (Availability) |
+| 11 | **Model Evaluation Infrastructure** | Evaluation data exposure (Confidentiality), Manipulated evaluation results (Integrity), Resource starvation (Availability) |
+| 12 | **Model Training & Tuning Infrastructure** | Training data leakage, intellectual property exposure (Confidentiality), Model poisoning, backdoors (Integrity), Training disruption (Availability) |
+| 13 | **Model Frameworks and Code** | Vulnerable code exploitation (Confidentiality), Supply chain attacks, dependency confusion (Integrity), Infrastructure crashes (Availability) |
+| 14 | **Data Storage Infrastructure** | Unauthorized data access, breaches (Confidentiality), Data modification or deletion (Integrity), Disk flooding, ransomware attacks (Availability) |
 
 ---
 
-### Identify Threats
+## 🟨 Data Layer Threats
 
-1. **Prompt Injection**
-   - Direct: Users directly manipulating inputs.
-   - Indirect: Inputs from external sources (e.g., files or databases) being maliciously altered to manipulate model behavior.
-
-2. **Sensitive Information Disclosure**
-   - Unauthorized inference of confidential data (training data, model weights, API details).
-
-3. **Data and Model Poisoning**
-   - Malicious training data introduction or manipulation during retraining.
-   - Manipulation of model parameters or embedding layers.
-
-4. **Improper Output Handling**
-   - Inaccurate, biased, or harmful outputs due to insufficient validation of model outputs.
-
-5. **Excessive Agency**
-   - AI systems operating beyond their intended scope, potentially causing unintended harmful actions.
-
-6. **System Prompt Leakage**
-   - Exposing confidential instructions provided in prompts, which should remain private.
-
-7. **Vector and Embedding Weaknesses**
-   - Attacks on retrieval-augmented generation (RAG) systems or embedding layers leading to model manipulation.
-
-- **Integrity Violations**
-  - Model poisoning, targeted attacks, evasion attacks through adversarial inputs.
-
-- **Availability Violations**
-  - Denial of service (DoS) via model poisoning or latency-energy attacks.
-
-- **Privacy Compromise**
-  - Extraction of private information through membership inference, model extraction, or training data reconstruction.
-
-- **Supply Chain Attacks**
-  - Compromise of external libraries or components used within the AI infrastructure.
+| # | Component | Threats (CIA) |
+|---|-----------|---------------|
+| 15 | **Training Data** | Data breaches, unauthorized access (Confidentiality), Data poisoning, corruption (Integrity), Data destruction, excessive processing (Availability) |
+| 16 | **Data Filtering and Processing** | Sensitive data leaks during processing (Confidentiality), Filter bypass, malicious data insertion (Integrity), Resource-heavy filtering causing DoS (Availability) |
+| 17 | **Data Sources** | MITM interception during transfer (Confidentiality), Data tampering in transit (Integrity), Data source downtime or throttling (Availability) |
+| 18 | **External Data Sources** | Third-party breaches (Confidentiality), External data manipulation (Integrity), Downtime, rate-limiting (Availability) |
 
 ---
 
-### Step 4: Potential Attack Vectors in the AI Architecture:
-
-**User/API layer threats:**
-- Direct prompt injection via API calls.
-- API abuse to access unauthorized functionality.
-
-**Model threats:**
-- Poisoned data inputs causing integrity violations.
-- Manipulation through indirect prompt injection or compromised embeddings.
-
-**Infrastructure threats:**
-- API exploitation for resource exhaustion (unbounded consumption).
-- Compromise of cloud infrastructure hosting models or data storage.
-
-
+In the next sections we will analyze:
+- the OWASP Threats coming from OWASP AI Exchange and OWASP GenAI projects in order to review our approach adding possible new security threats
+- the AI System architecture from a Trustworthy and Responsible AI point of view in order to add specific AI developement threats not security related.
 
 ## References
 
@@ -307,10 +200,8 @@ We did analyze each component of the architecture from a CIA point of view.
 
 
 
-
-
 ---
 NEXT:
-2.1 [Identify AI Threats](2.1IdentifyAIThreats.md)
+2.1 [Identify AI Security Threats](2.1IdentifyAIThreats.md)
 
 [Table of Contents](/Document/README.md)
