--- a/Document/content/2.1IdentifyAIThreats.md
+++ b/Document/content/2.1IdentifyAIThreats.md
@@ -2,7 +2,7 @@
 
 ## Mapping the OWASP Threats of AI Architecture
 
-Firstly we performed a mapping between all the OWASP Threats on modular AI architecture (based on Google’s [Secure AI Framework](https://saif.google/secure-ai-framework/saif-map)), visually identifying where AI-specific threats apply across the data, infrastructure, model, and application layers.
+We perform now a mapping between all the OWASP Security Threats on modular AI architecture (based on Google’s [Secure AI Framework](https://saif.google/secure-ai-framework/saif-map)), visually identifying where AI-specific threats apply across the data, infrastructure, model, and application layers.
 
 Our goal was to start mapping the onto concrete components of the architecture, as seen in this diagram:
 - [The OWASP Top 10 LLM Risks 2025](https://genai.owasp.org/llm-top-10/)
@@ -46,6 +46,9 @@ Given the above results, the following is a table with the 20 initial threats we
 
 ---
 NEXT:
-[3. AI Testing Guide Framework](3.AITG-Framework.md)
+---
+NEXT:
+2.2 [Identify AI Trustworthy Threats](RAI-TM.md)
 
 [Table of Contents](/Document/README.md)
+
