--- a/Document/content/1.Introduction.md
+++ b/Document/content/1.Introduction.md
@@ -27,8 +27,10 @@ AI testing should be integrated throughout the entire SDLC:
 - **Validation Phase**: Performing rigorous validation to confirm model performance aligns with business and ethical requirements.
 - **Deployment Phase**: Conducting extensive testing in real-world scenarios and continuous monitoring post-deployment to detect drift and maintain optimal performance.
 
+  This Guide focuses on the testing methodolgy after a first AI product running version is ready to test.
+
 ---
 NEXT:
-1.1 [Ojectives](1.2Objectives.md)
+1.1 [1.1 Ojectives](1.2Objectives.md)
 
 [Table of Contents](/Document/README.md)
