--- a/Document/content/1.2Objectives.md
+++ b/Document/content/1.2Objectives.md
@@ -13,7 +13,7 @@ Key tests covered in this guide include:
 - **Test for Data Quality**: Ensuring input data is accurate, complete, and representative.**
 - **Test for Input Injection**: Detecting and mitigating malicious inputs intended to manipulate AI behavior.
 - **Test for Output Content**: Confirming AI outputs align with expected accuracy, appropriateness, and ethical guidelines.
-- - **Testing for Privacy**: Ensuring data confidentiality, model sharing data.
+- **Testing for Privacy**: Ensuring data confidentiality, model sharing data.
 - **Test for Performance and Reliability**: Continuously evaluating AI system responsiveness, stability, scalability, and reliability under varied conditions.
 
 ---
