--- a/Document/content/2.1IdentifyAIThreats.md
+++ b/Document/content/2.1IdentifyAIThreats.md
@@ -1,6 +1,6 @@
 
 
-## Mapping the OWASP Threats of AI Architecture
+# 2.1 Mapping the OWASP Threats
 
 We perform now a mapping between all the OWASP Security Threats on modular AI architecture (based on Google’s [Secure AI Framework](https://saif.google/secure-ai-framework/saif-map)), visually identifying where AI-specific threats apply across the data, infrastructure, model, and application layers.
 
