--- a/Document/content/3.AITG-Framework.md
+++ b/Document/content/3.AITG-Framework.md
@@ -1,6 +1,6 @@
- AI Testing Guide
+# 3. AI Testing Guide Framework
 
-Welcome to the **AI Testing Guide (AITG)** — a structured framework that maps the most critical security and trustworthy AI threats to concrete test cases. This project aims to bridge traditional cybersecurity, MLOps testing, and Responsible AI assessments under a unified structure.
+Based on the Threat modeling performed at Chapert 2, we can now define a structured framework that maps the most critical security and trustworthy AI threats to concrete test cases. This project aims to bridge traditional cybersecurity, MLOps testing, and Responsible AI assessments under a unified structure.
 
 Each test case is categorized under one of the four pillars, based on the threat modeling we did perform in the previous chapters:
 
@@ -68,3 +68,6 @@ The following are the list of tests to perform:
 | AITG-DAT-06   | Testing for Harmful Content in Data       |
 | AITG-DAT-07   | Testing for Data Minimization & Consent   |
 
+NEXT:
+[3.1 Testing for Prompt Injection](https://github.com/MatOwasp/AI-Testing-Guide/blob/main/Document/content/tests/AITG-APP-01_Testing_for_Prompt_Injection.md)     
+[Table of Content](README.md)
