--- a/Document/content/1.2Objectives.md
+++ b/Document/content/1.2Objectives.md
@@ -1,20 +1,58 @@
 
-### Objectives of AI Testing
+### 1.1 Objectives of AI Testing Guide
 
-The primary objectives of AI testing include ensuring the quality, security, and ethical compliance of AI systems. This guide focuses on several key testing dimensions:
+The **AI Testing Guide** aims to provide a structured, practical, and security-oriented framework for evaluating the **robustness, trustworthiness, and resilience** of AI systems. The focus is on helping **AI security testers, auditors, red teamers, MLOps engineers, and developers** to understand, model, and validate risks specific to **AI applications, models, infrastructure, and data pipelines**.
 
-- **AI Model Testing**: Evaluating the accuracy, robustness, and reliability of AI models, including testing for training data poisoning.
-- **AI Implementation Testing**: Ensuring that the integration of AI models into broader systems is secure and functional, including testing for data encryption and secure storage.
-- **AI System Testing**: Examining the overall functionality and interoperability of the integrated AI systems.
-- **AI Runtime Testing**: Continuously monitoring the deployed AI systems for vulnerabilities such as prompt injection attacks, verifying the correctness and appropriateness of outputs, assessing data quality, and maintaining high performance and reliability.
+### Who It's For
+- **AI Security testers** looking to go beyond traditional vulnerability scanning and assess model behaviors.
+- **AI Auditors and compliance teams** verifying adherence to Responsible AI standards.
+- **AI Engineeds, Developers and MLOps professionals** needing actionable insights into how to make AI systems resilient and trustworthy.
+- **AI Red teamers** performing adversarial evaluations or generative AI red teaming.
 
-Key tests covered in this guide include:
-- **Test for Training Data Poisoning**: Preventing and identifying manipulated training data that could compromise model integrity.
-- **Test for Data Quality**: Ensuring input data is accurate, complete, and representative.**
-- **Test for Input Injection**: Detecting and mitigating malicious inputs intended to manipulate AI behavior.
-- **Test for Output Content**: Confirming AI outputs align with expected accuracy, appropriateness, and ethical guidelines.
-- **Testing for Privacy**: Ensuring data confidentiality, model sharing data.
-- **Test for Performance and Reliability**: Continuously evaluating AI system responsiveness, stability, scalability, and reliability under varied conditions.
+---
+
+## Methodology: From Threat Modeling to Testing
+
+This guide is structured around a clear methodology:
+
+1. **Threat Modeling**  
+   We create a general AI system model that is broken down into its architectural components. Threats are identified across four main domains:
+   - Application
+   - Model
+   - Infrastructure
+   - Data
+
+2. **Threat Mapping**  
+   We map threats from multiple sources:
+   -OWASP Top 10 for LLM
+   - OWASP AI Exchange
+   - Responsible and Trustworthu AI frameworks.
+
+4. **Test Design**  
+   For each identified threat, we design corresponding test cases. Each test includes:
+   - Payload examples
+   - Expected behavior
+   - Detection strategy
+   - Suggested tools
+
+---
+
+## What This Project Does NOT Cover
+
+This guide **does not attempt to replace or duplicate** existing foundational security testing methodologies. Instead, it complements them by focusing on **AI-specific threats**. For general system and application security, we recommend the following best-in-class references:
+
+- **Network Security**  
+  🔗 *NIST SP 800-115: Technical Guide to Information Security Testing and Assessment*  
+  [https://csrc.nist.gov/publications/detail/sp/800-115/final](https://csrc.nist.gov/publications/detail/sp/800-115/final)
+
+- **Infrastructure Security**  
+  🔗 *OSSTMM – Open Source Security Testing Methodology Manual*  
+  [https://www.isecom.org/OSSTMM.3.pdf](https://www.isecom.org/OSSTMM.3.pdf)
+
+- **Web Application Security**  
+  🔗 *OWASP Web Security Testing Guide (WSTG)*  
+  [https://owasp.org/www-project-web-security-testing-guide/](https://owasp.org/www-project-web-security-testing-guide/)
+
 
 ---
 NEXT:
