--- a/Document/content/1.2Objectives.md
+++ b/Document/content/1.2Objectives.md
@@ -4,6 +4,8 @@
 The **AI Testing Guide** aims to provide a structured, practical, and security-oriented framework for evaluating the **robustness, trustworthiness, and resilience** of AI systems. The focus is on helping **AI security testers, auditors, red teamers, MLOps engineers, and developers** to understand, model, and validate risks specific to **AI applications, models, infrastructure, and data pipelines**.
 
 ### Who It's For
+The Guide is intended to the following audience:
+
 - **AI Security testers** looking to go beyond traditional vulnerability scanning and assess model behaviors.
 - **AI Auditors and compliance teams** verifying adherence to Responsible AI standards.
 - **AI Engineeds, Developers and MLOps professionals** needing actionable insights into how to make AI systems resilient and trustworthy.
