--- a/Document/content/3.AITG-Framework.md
+++ b/Document/content/3.AITG-Framework.md
@@ -1,6 +1,6 @@
 # 3. AI Testing Guide Framework
 
-Based on the Threat modeling performed at Chapert 2, we can now define a structured framework that maps the most critical security and trustworthy AI threats to concrete test cases. This project aims to bridge traditional cybersecurity, MLOps testing, and Responsible AI assessments under a unified structure.
+Based on the Threat modeling performed at Chapter 2, we can now define a structured framework that maps the most critical security and trustworthy AI threats to concrete test cases. This project aims to bridge traditional cybersecurity, MLOps testing, and Responsible AI assessments under a unified structure.
 
 Each test case is categorized under one of the four pillars, based on the threat modeling we did perform in the previous chapters:
 
