--- a/Document/content/2.AI-TM.md
+++ b/Document/content/2.AI-TM.md
@@ -54,7 +54,7 @@ This threat model analyzes the provided AI System Architecture. We've structured
 
 1. **What are we building?** (Architectural Decomposition)
 2. **What can go wrong?** (Threat Identification)
-3. **What are we doing about it?** (Mitigations)
+3. **What are we doing about it?** (Mitigations, not in scope)
 4. **Did we do a good job?** (Validation and Review)
 
 ---
@@ -62,7 +62,6 @@ This threat model analyzes the provided AI System Architecture. We've structured
 ## Architectural Decomposition
 
 Based on the provided AI system architecture, we identify these key components:
-
 
 
 <p align="center">
@@ -175,6 +174,20 @@ Here are the four threat tables aligned with our AI system architecture. Each ta
 | 16 | **Data Filtering and Processing** | Sensitive data leaks during processing (Confidentiality), Filter bypass, malicious data insertion (Integrity), Resource-heavy filtering causing DoS (Availability) |
 | 17 | **Data Sources** | MITM interception during transfer (Confidentiality), Data tampering in transit (Integrity), Data source downtime or throttling (Availability) |
 | 18 | **External Data Sources** | Third-party breaches (Confidentiality), External data manipulation (Integrity), Downtime, rate-limiting (Availability) |
+
+These threats list include some controls we are not able to cover in this guide, that  **does not attempt to replace or duplicate** existing foundational security testing methodologies. Instead, it complements them by focusing on **AI-specific threats**. For general system and application security, we recommend the following best-in-class references:
+
+- **Network Security**  
+  🔗 *NIST SP 800-115: Technical Guide to Information Security Testing and Assessment*  
+  [https://csrc.nist.gov/publications/detail/sp/800-115/final](https://csrc.nist.gov/publications/detail/sp/800-115/final)
+
+- **Infrastructure Security**  
+  🔗 *OSSTMM – Open Source Security Testing Methodology Manual*  
+  [https://www.isecom.org/OSSTMM.3.pdf](https://www.isecom.org/OSSTMM.3.pdf)
+
+- **Web Application Security**  
+  🔗 *OWASP Web Security Testing Guide (WSTG)*  
+  [https://owasp.org/www-project-web-security-testing-guide/](https://owasp.org/www-project-web-security-testing-guide/)
 
 ---
 
