--- a/Document/content/3.AITG-Framework.md
+++ b/Document/content/3.AITG-Framework.md
@@ -10,12 +10,38 @@ Each test case is categorized under one of the four pillars, based on the threat
 - 🟨 **AI Data Testing**
 
 ---
+In our framework we use prompt injections and prompt attacks to indenfity the vulnerabilities. We define the following three kind of Input for an AI System:
 
-The following are the list of tests to perform:
+**1) Prompt (Intended Prompt)**  
+This is the standard, intended input given to the AI system by the designer or user without any malicious intent or attempt to manipulate the system. This type of input aligns with the intended functionality and expected behavior of the AI model.
+
+- **Example:** Asking the AI to summarize an article, answer a customer query, or generate text according to specified instructions.
 
 ---
 
-## 📋 Final AI Testing Guide – Test Matrix with Threat Sources
+**2) Prompt Injection**  
+This type of input refers to scenarios where the user intentionally or unintentionally provides prompts designed to manipulate or override the intended behavior of the AI system, causing it to produce unintended, possibly harmful, or sensitive outputs. It can be divided into two categories:
+
+- **Direct Prompt Injection:** User directly inputs text commands explicitly intended to manipulate model behavior.
+- **Indirect Prompt Injection:** Malicious prompts embedded within externally sourced content (e.g., web pages, documents) which the model ingests unknowingly.
+
+- **Example:** Injecting instructions to bypass security constraints, reveal private system information, or disregard programmed ethical guidelines.
+
+---
+
+**3) Prompt Attack**  
+Prompt attacks involve specific manipulative prompts designed to exploit inherent model vulnerabilities related to hallucinations (model inventing or confidently providing incorrect information) and Responsible AI (RAI) and Trustworthy considerations (ethical guidelines, fairness, transparency). This category explicitly deals with exploiting known weaknesses in the AI model’s accuracy or ethical controls.
+
+- **Hallucination Attack:** Crafting prompts designed to exploit the model's propensity for fabricating believable but incorrect responses.
+  - **Example:** Asking the AI for non-existent historical facts or scientific data, leading to plausible yet entirely fabricated responses.
+
+- **Responsible AI Attack (RAI Attack):** Prompts intentionally exploiting or subverting ethical and fairness-related constraints.
+  - **Example:** Manipulating the model to generate biased, toxic, or inappropriate outputs, contrary to established ethical standards.
+
+---
+The following are the list of tests to perform for each of the 4 cathegories:
+
+---
 
 ### 🟦 AI Application Testing
 
@@ -36,7 +62,6 @@ The following are the list of tests to perform:
 | AITG-APP-13   | [Testing for Over-Reliance on AI](/Document/content/tests/AITG-APP-13_Testing_for_Over-Reliance_on_AI.md) | Responsible AI |
 | AITG-APP-14   | [Testing for Explainability and Interpretability](/Document/content/tests/AITG-APP-14_Testing_for_Explainability_and_Interpretability.md) | Responsible AI |
 
----
 
 ### 🟪 AI Model Testing
 
