--- a/Document/content/3.AITG-Framework.md
+++ b/Document/content/3.AITG-Framework.md
@@ -12,6 +12,10 @@ Each test case is categorized under one of the four pillars, based on the threat
 ---
 In our framework we use prompt injections and prompt attacks to indenfity the vulnerabilities. We define the following three kind of Input for an AI System:
 
+<p align="center">
+  <img src="/Document/images/Prompt.png" alt="Description" width="600"/>
+</p>
+
 **1) Prompt (Intended Prompt)**  
 This is the standard, intended input given to the AI system by the designer or user without any malicious intent or attempt to manipulate the system. This type of input aligns with the intended functionality and expected behavior of the AI model.
 
