--- a/Document/content/2.1IdentifyAIThreats.md
+++ b/Document/content/2.1IdentifyAIThreats.md
@@ -25,7 +25,7 @@ We added the related test name.
 |--:|--------------------|------------|--------|----------|---------------------|
 | 1 | Prompt Injection | LLM01 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm01-prompt-injection/) | Testing for Prompt Injection |
 | 2 | Indirect Prompt Injection | LLM01 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm01-prompt-injection/) | Testing for Indirect Prompt Injection |
-| 3 | Adversarial Input (Evasion) | Threat 2.1 | OWASP AI Exchange | [link](https://owaspai.org/docs/2_threats_through_use/#21-adversarial-input-evasion) | Testing for Evasion Attacks |
+| 3 | Adversarial Input (Evasion) | Threat 2.1 | OWASP AI Exchange | [link](https://owaspai.org/docs/2_threats_through_use/#21-evasion) | Testing for Evasion Attacks |
 | 4 | Runtime Model Poisoning | LLM04 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm042025-data-and-model-poisoning/) | Testing for Runtime Model Poisoning |
 | 5 | Model Poisoning | LLM04 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm042025-data-and-model-poisoning/) | Testing for Poisoned Training Sets |
 | 6 | Data Poisoning during Fine-tuning | LLM04 | OWASP Top 10 2025 | [link](https://genai.owasp.org/llmrisk/llm042025-data-and-model-poisoning/) | Testing for Fine-tuning Poisoning |
