--- a/Document/content/3.AITG-Framework.md
+++ b/Document/content/3.AITG-Framework.md
@@ -42,7 +42,7 @@ Prompt attacks involve specific manipulative prompts designed to exploit inheren
 
 ---
 
-The following are the list of tests to perform for each of the 4 cathegories:
+The following are the list of tests to perform for each of the 4 cathegories of our AI Architecture Model analyzed on the sections above:
 
 ### 🟦 AI Application Testing
 
