--- a/Document/content/3.AITG-Framework.md
+++ b/Document/content/3.AITG-Framework.md
@@ -10,7 +10,7 @@ Each test case is categorized under one of the four pillars, based on the threat
 - 🟨 **AI Data Testing**
 
 ---
-In our framework we use prompt injections and prompt attacks to indenfity the vulnerabilities. We define the following three kind of Input for an AI System:
+In our framework we use prompt injections and prompt attacks to indentify the vulnerabilities. We define the following three kind of Input for an AI System:
 
 <p align="center">
   <img src="/Document/images/Prompt.png" alt="Description" width="800"/>
