--- a/Document/content/3.AITG-Framework.md
+++ b/Document/content/3.AITG-Framework.md
@@ -128,5 +128,5 @@ Each test case is categorized under one of four pillars:
 
 
 NEXT:
-[3.1 Testing for Prompt Injection](https://github.com/MatOwasp/AI-Testing-Guide/blob/main/Document/content/Document/content/tests/AITG-APP-01_Testing_for_Prompt_Injection.md)     
+3. [AI Application Testing](https://github.com/MatOwasp/AI-Testing-Guide/blob/main/Document/content/tests/AI_APPLICATION_TESTING.md)
 [Table of Content](README.md)
