--- a/Document/content/3.AITG-Framework.md
+++ b/Document/content/3.AITG-Framework.md
@@ -1,13 +1,16 @@
+
 # 3. AI Testing Guide Framework
 
+Based on the Threat modeling performed in Chapter 2, we define a structured framework mapping the AI Architecure threats to concrete test cases.
+
+Each test case is categorized under one of four pillars:
+
+- 🟦 [**AI Application Testing**](https://github.com/MatOwasp/AI-Testing-Guide/blob/main/Document/content/tests/AI_APPLICATION_TESTING.md)
+- 🟪 [**AI Model Testing**](https://github.com/MatOwasp/AI-Testing-Guide/blob/main/Document/content/tests/AI_MODEL_TESTING.md)
+- 🟩 [**AI Infrastructure Testing**](https://github.com/MatOwasp/AI-Testing-Guide/blob/main/Document/content/tests/AI_INFRASTRUCTURE_TESTING.md)
+- 🟨 [**AI Data Testing**](https://github.com/MatOwasp/AI-Testing-Guide/blob/main/Document/content/tests/AI_DATA_TESTING.md)
+
 Based on the Threat modeling performed at Chapter 2, we can now define a structured framework that maps the most critical security and trustworthy AI threats to concrete test cases. This project aims to bridge traditional cybersecurity, MLOps testing, and Responsible AI assessments under a unified structure.
-
-Each test case is categorized under one of the four pillars, based on the threat modeling we did perform in the previous chapters:
-
-- 🟦 **AI Application Testing**
-- 🟪 **AI Model Testing**
-- 🟩 **AI Infrastructure Testing**
-- 🟨 **AI Data Testing**
 
 ---
 In our framework we use prompt injections and prompt attacks to indentify the vulnerabilities. We define the following three kind of Input for an AI System:
@@ -39,31 +42,6 @@ Prompt attacks involve specific manipulative prompts designed to exploit inheren
 
 - **Responsible AI Attack (RAI Attack):** Prompts intentionally exploiting or subverting ethical and fairness-related constraints.
   - **Example:** Manipulating the model to generate biased, toxic, or inappropriate outputs, contrary to established ethical standards.
-
----
-
-The following are the list of tests to perform for each of the 4 cathegories of our AI Architecture Model analyzed on the sections above:
-
-
-Here's your AI Testing Guide Framework fully reviewed and structured clearly, with an additional column labeled **"Domain(s)"**, specifying each test's coverage across the four domains you outlined:
-
-- **Security**
-- **Privacy**
-- **Responsible AI (RAI)**
-- **Trustworthy AI**
-
----
-
-# 3. AI Testing Guide Framework
-
-Based on the Threat modeling performed in Chapter 2, we define a structured framework mapping the most critical Security, Privacy, RAI, and Trustworthy AI threats to concrete test cases.
-
-Each test case is categorized under one of four pillars:
-
-- 🟦 [**AI Application Testing**](https://github.com/MatOwasp/AI-Testing-Guide/blob/main/Document/content/tests/AI_APPLICATION_TESTING.md)
-- 🟪 [**AI Model Testing**](https://github.com/MatOwasp/AI-Testing-Guide/blob/main/Document/content/tests/AI_MODEL_TESTING.md)
-- 🟩 [**AI Infrastructure Testing**](https://github.com/MatOwasp/AI-Testing-Guide/blob/main/Document/content/tests/AI_INFRASTRUCTURE_TESTING.md)
-- 🟨 [**AI Data Testing**](https://github.com/MatOwasp/AI-Testing-Guide/blob/main/Document/content/tests/AI_DATA_TESTING.md)
 
 ---
 
